# game-devices-udev

./: 71-8bitdo-Controllers.rules  71-8bitdo-controllers.rules  71-AlphaImagingTechnologyCo-SteamVR.rules  71-Armor-Controllers.rules  71-Betop-Controllers.rules  71-HTC-SteamVR.rules  71-Hori-Controllers.rules  71-Logitech-Controllers.rules  71-Nintendo-Controllers.rules  71-Strikepad-Controllers.rules  71-Valve-Controllers.rules  71-Valve-SteamVR.rules  71-alpha_imaging_technology_co-vr.rules  71-armor-controllers.rules  71-astro_gaming-controllers.rules  71-cypress_semiconductor_corp.rules  71-edgetx-controllers.rules  71-emio-controllers.rules  71-google-controllers.rules  71-hori-controllers.rules  71-htc-vr.rules  71-logitech-controllers.rules  71-microsoft-controllers.rules  71-nintendo-controllers.rules  71-nvidia-controllers.rules  71-pdp-controllers.rules  71-pid_codes-controllers.rules  71-powera-controllers.rules  71-raspberry-pi-ltd.rules  71-razer-controllers.rules  71-sony-controllers.rules  71-sony-vr.rules  71-uinput-dev-early-creation.rules  71-valve-controllers.rules  71-valve-vr.rules  71-vkb_sim-controllers.rules  71-zeroplus-technology-corporation-controllers.rules  71-zeroplus_technology_corporation-controllers.rules  8BitDo.md  8bitdo.rules  (+9 more)
src/: betop-gdu.rules  bigscreen-gdu.rules  cypress_semiconductor_corp-gdu.rules  hori-gdu.rules  mad_catz-gdu.rules  microsoft-gdu.rules  nacon-gdu.rules  nintendo-gdu.rules  pdp-gdu.rules  personal_communication_systems_inc-gdu.rules  powera-gdu.rules  razer-gdu.rules  sony-gdu.rules  thrustmaster-gdu.rules  valve-gdu.rules  zeroplus_technology_corporation-gdu.rules
