option('uinput_dev_early_creation', type: 'boolean', value: true, description: 'Install udev rule to load uinput early')
option('udev_priority', type: 'integer', value: 71, description: 'Prefix priority for installed udev rules (e.g. 71 -> 71-filename.rules)')

option('8bitdo', type: 'boolean', value: true, description: 'Install 8bitdo udev rule')
option('alpha_imaging_technology', type: 'boolean', value: true, description: 'Install alpha_imaging_technology udev rule')
option('astro_gaming', type: 'boolean', value: true, description: 'Install astro_gaming udev rule')
option('betop', type: 'boolean', value: true, description: 'Install betop udev rule')
option('cypress_semiconductor_corp', type: 'boolean', value: true, description: 'Install cypress_semiconductor_corp udev rule')
option('google', type: 'boolean', value: true, description: 'Install google udev rule')
option('hori', type: 'boolean', value: true, description: 'Install hori udev rule')
option('htc', type: 'boolean', value: true, description: 'Install htc udev rule')
option('logitech', type: 'boolean', value: true, description: 'Install logitech udev rule')
option('mad_catz', type: 'boolean', value: true, description: 'Install mad_catz udev rule')
option('microsoft', type: 'boolean', value: true, description: 'Install microsoft udev rule')
option('nacon', type: 'boolean', value: true, description: 'Install nacon udev rule')
option('nintendo', type: 'boolean', value: true, description: 'Install nintendo udev rule')
option('nvidia', type: 'boolean', value: true, description: 'Install nvidia udev rule')
option('pdp', type: 'boolean', value: true, description: 'Install pdp udev rule')
option('personal_communication_systems_inc', type: 'boolean', value: true, description: 'Install personal_communication_systems_inc udev rule')
option('pid_codes', type: 'boolean', value: true, description: 'Install pid_codes udev rule')
option('powera', type: 'boolean', value: true, description: 'Install powera udev rule')
option('raspberry_pi_ltd', type: 'boolean', value: true, description: 'Install raspberry_pi_ltd udev rule')
option('razer', type: 'boolean', value: true, description: 'Install razer udev rule')
option('sony', type: 'boolean', value: true, description: 'Install sony udev rule')
option('valve', type: 'boolean', value: true, description: 'Install valve udev rule')
option('vkb_sim', type: 'boolean', value: true, description: 'Install vkb_sim udev rule')
option('zeroplus_technology_corporation', type: 'boolean', value: true, description: 'Install zeroplus_technology_corporation udev rule')